# muse_framework

./: LICENSE.txt
framework/audio/: CMakeLists.txt  iaudiodriver.h  iaudiodrivercontroller.h
framework/audio/common/: CMakeLists.txt  alignmentbuffer.h  audioerrors.h  audiosanitizer.cpp  audiosanitizer.h  audiotaskscheduler.h  audiothreadsecurer.cpp  audiothreadsecurer.h  audiotypes.h  audioutils.h  audioworkgroup.cpp  audioworkgroup.h  concurrentqueue.h  iaudiotaskscheduler.h  iaudiothreadsecurer.h  lightweightsemaphore.h  realtimethreadpool.h  soundfonttypes.h  timeposition.h  workmode.cpp  workmode.h
framework/audio/common/rpc/: irpcchannel.h  rpcpacker.h
framework/audio/common/rpc/platform/general/: generalrpcchannel.cpp  generalrpcchannel.h
framework/audio/common/rpc/platform/web/: webrpcchannel.cpp  webrpcchannel.h
framework/audio/devtools/: inputlag.h
framework/audio/driver/: CMakeLists.txt
framework/audio/driver/platform/ios/: iosaudiodriver.h  iosaudiodriver.mm
framework/audio/driver/platform/jack/: audiodeviceslistener.cpp  jackaudiodriver.cpp  jackaudiodriver.h
framework/audio/driver/platform/lin/: alsaaudiodriver.cpp  alsaaudiodriver.h  audiodeviceslistener.cpp  audiodeviceslistener.h  pwaudiodriver.cpp  pwaudiodriver.h
framework/audio/driver/platform/osx/: osxaudiodriver.h  osxaudiodriver.mm  osxdirectaudiodriver.h  osxdirectaudiodriver.mm
framework/audio/driver/platform/web/: webaudiodriver.cpp  webaudiodriver.h
framework/audio/driver/platform/win/: wasapiaudiodriver.cpp  wasapiaudiodriver.h
framework/audio/driver/platform/win/asio/: asioaudiodriver.cpp  asioaudiodriver.h
framework/audio/engine/: CMakeLists.txt  enginesetup.cpp  enginesetup.h  iaudioengineconfiguration.h  iaudiosource.h  ienginecontroller.h  iengineplayer.h  ifxprocessor.h  ifxresolver.h  iplayhead.h  isoundfontrepository.h  isynthesizer.h  isynthresolver.h  itransporteventsdispatcher.h
framework/audio/engine/internal/: abstractaudiosource.cpp  abstractaudiosource.h  abstracteventsequencer.h  audiocontext.cpp  audiocontext.h  audioengine.cpp  audioengine.h  audioengineconfiguration.cpp  audioengineconfiguration.h  audiofactory.cpp  audiofactory.h  contextplayer.cpp  contextplayer.h  enginecontroller.cpp  enginecontroller.h  enginerpccontroller.cpp  enginerpccontroller.h  iaudiocontext.h  iaudioengine.h  iaudiofactory.h  iexecoperation.h  igettracksource.h  mixer.cpp  mixer.h  noisesource.cpp  noisesource.h  samplerateconvertor.cpp  samplerateconvertor.h  sinesource.cpp  sinesource.h  transporteventsdispatcher.cpp  transporteventsdispatcher.h
framework/audio/engine/internal/codecs/: vorbisdecoder.cpp  vorbisdecoder.h
framework/audio/engine/internal/dsp/: audiomathutils.h  compressor.cpp  compressor.h  envelopefilterconfig.h  limiter.cpp  limiter.h
framework/audio/engine/internal/export/: aacencoder.cpp  aacencoder.h  abstractaudioencoder.h  flacencoder.cpp  flacencoder.h  mp3encoder.cpp  mp3encoder.h  oggencoder.cpp  oggencoder.h  soundtrackwriter.cpp  soundtrackwriter.h  wavencoder.cpp  wavencoder.h
framework/audio/engine/internal/fx/: abstractfxresolver.cpp  abstractfxresolver.h  equaliser.cpp  equaliser.h  fxresolver.cpp  fxresolver.h  musefxresolver.cpp  musefxresolver.h
framework/audio/engine/internal/fx/reverb/: allpassdispersion.h  allpassmodulateddelay.h  circularsamplebuffer.h  iirbiquadfilter.h  ivndecorrelation.cpp  ivndecorrelation.h  reverbfilters.h  reverbmatrices.h  reverbprocessor.cpp  reverbprocessor.h  sampledelay.h  simdtypes.h  simdtypes_neon.h  simdtypes_scalar.h  simdtypes_sse2.h  smoothlinearvalue.h  sparsefirfilter.h  vectorops.h
framework/audio/engine/internal/nodes/: audionode.h  audiosourcenode.h  chainnode.h  controlnode.cpp  controlnode.h  eventaudionode.cpp  eventaudionode.h  fxchain.cpp  fxchain.h  fxnode.cpp  fxnode.h  mixernode.cpp  mixernode.h  playheadnode.cpp  playheadnode.h  signalnode.cpp  signalnode.h  trackchain.cpp  trackchain.h
framework/audio/engine/internal/synthesizers/: abstractsynthesizer.cpp  abstractsynthesizer.h  soundfontrepository.cpp  soundfontrepository.h  synthresolver.cpp  synthresolver.h
framework/audio/engine/platform/general/: generalaudioworker.cpp  generalaudioworker.h
framework/audio/engine/platform/web/: networksfloader.cpp  networksfloader.h
framework/audio/main/: audiomodule.cpp  audiomodule.h  iaudioconfiguration.h  iplayback.h  iplayer.h  isoundfontcontroller.h  isoundfontinstallscenario.h  istartaudiocontroller.h
framework/audio/main/internal/: audioactionscontroller.cpp  audioactionscontroller.h  audioconfiguration.cpp  audioconfiguration.h  audiodrivercontroller.cpp  audiodrivercontroller.h  audiouiactions.cpp  audiouiactions.h  playback.cpp  playback.h  player.cpp  player.h  startaudiocontroller.cpp  startaudiocontroller.h
framework/audio/main/platform/general/: generalsoundfontcontroller.cpp  generalsoundfontcontroller.h  generalsoundfontinstallscenario.cpp  generalsoundfontinstallscenario.h
framework/audio/main/platform/web/: websoundfontcontroller.cpp  websoundfontcontroller.h
framework/audio/tests/: CMakeLists.txt  alignbuffer_tests.cpp  rpcpacker_tests.cpp
framework/rcommand/: CMakeLists.txt  commandable.h  commandtypes.h  icommanddispatcher.h  icommandsregister.h  icommandsstate.h  imodulecommandsregister.h  imodulecommandsstate.h  ircommanddispatcher.h  rcommandable.h  rcommandmodule.cpp  rcommandmodule.h  rcommandtypes.h
framework/rcommand/internal/: commanddispatcher.cpp  commanddispatcher.h  commandsregister.cpp  commandsregister.h  commandsstate.cpp  commandsstate.h  rcommanddispatcher.cpp  rcommanddispatcher.h
framework/rcommand/qml/Muse/RCommand/: CMakeLists.txt  CommandListDialog.qml  CommandListPanel.qml  commandlistmodel.cpp  commandlistmodel.h
framework/rcontrol/: CMakeLists.txt  rcontrolmodule.cpp  rcontrolmodule.h
framework/rcontrol/mcp/: itransport.h  mcpcontroller.cpp  mcpcontroller.h  mcpserver.cpp  mcpserver.h  mcptypes.h
framework/rcontrol/mcp/bridge/: main.cpp
framework/rcontrol/mcp/transport/: tcptransport.cpp  tcptransport.h
(+1439 files in other folders)
